[metadata]
name = TwincatAds
version = 0.1
license = MIT
description = Tango device server to access variables on a TwinCAT PLC via ADS
long_description = file: README.md
author = MBI-Div-B
classifiers=
   Development Status :: 4 - Beta
   Topic :: Software Development :: Embedded Systems
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pytango
   pyads
[options.packages.find]
where=src
[options.entry_points]
    console_scripts =
        TwincatAds = TwincatAds:main